ingress/ingress-fanout/multiapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiapp-ingress
spec:
  rules:
    - host: codographia.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 8080
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 8080
